[tool.poetry]
name = "rl-framework"
version = "0.1.0"
description = ""
authors = ["windlx <1418043337@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
labml = "^0.5.2"
onnx = "^1.16.0"
pydantic = "^2.8.2"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.1"
torch = { version = "2.4.0", source = "torch" }
labml-helpers = "^0.4.89"
einops = "^0.8.0"
gymnasium = {extras = ["all"], version = "^0.29.1"}
psutil = "^6.0.0"
py3nvml = "^0.2.7"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu124"
priority = "supplemental"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
